--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CredenceSoftSolutions</title>
+  <title>Petalix Technologies</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,9 +42,9 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
       
-      <!--<h1 class="logo me-auto"><a href="index.html">CredenceSoftSolutions</a></h1>-->
+      <!--<h1 class="logo me-auto"><a href="index.html">Petalix Technologies</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-       <a href="index.html" class="logo me-auto"><img src="assets/img/css-withouttext-rounded.png" alt="CredenceSoftSolutions" class="img-fluid"> CredenceSoftSolutions</a>
+       <a href="index.html" class="logo me-auto"><img src="assets/img/css-withouttext-rounded.png" alt="PetalixTechnologies" class="img-fluid"> Petalix Technologies</a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -179,7 +179,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
             <div class="content">
-              <h4>At <strong>CredenceSoftSolutions</strong>, we understand that choosing the right software development partner is a crucial decision for your business. With numerous options available, it's essential to select a partner that aligns with your goals, values, and vision.</h4>
+              <h4>At <strong>Petalix Technologies</strong>, we understand that choosing the right software development partner is a crucial decision for your business. With numerous options available, it's essential to select a partner that aligns with your goals, values, and vision.</h4>
              <!-- <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
               </p>-->
@@ -955,7 +955,7 @@ Bureaucratic processes: Slow decision-making processes that hinder innovation.
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>Business@CredenceSoftSolutions.com</p>
+                <p>Business@PetalixTechnologies.com</p>
               </div>
 
               <div class="phone">
@@ -1027,13 +1027,13 @@ Bureaucratic processes: Slow decision-making processes that hinder innovation.
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>CredenceSoftSolutions</h4>
+            <h4>Petalix Technologies</h4>
             <p>
               5 G9 Vasati <br>
               Vijaynagar 4th Stage, 2nd phase<br>
               Mysore-570017 <br><br>
               <strong>Phone:</strong> +91 8618393193<br>
-              <strong>Email:</strong> Business@CredenceSoftSolutions.com<br>
+              <strong>Email:</strong> Business@PetalixTechnologies.com<br>
             </p>
           </div>
 
@@ -1067,7 +1067,7 @@ Bureaucratic processes: Slow decision-making processes that hinder innovation.
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-              <a href="https://www.linkedin.com/in/credencesoftsolutions/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/PetalixTechnologies/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
             </div>
           </div>
@@ -1078,7 +1078,7 @@ Bureaucratic processes: Slow decision-making processes that hinder innovation.
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>CredenceSoftSolutions</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Petalix Technologies</span></strong>. All Rights Reserved
       </div>
       <!-- <div class="credits">
         <!-- All the links in the footer should remain intact. -->
