--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       
       <!--<h1 class="logo me-auto"><a href="index.html">Petalix Technologies</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-       <a href="index.html" class="logo me-auto"><img src="assets/img/css-withouttext-rounded.png" alt="PetalixTechnologies" class="img-fluid"> Petalix Technologies</a>
+       <a href="index.html" class="logo me-auto"><img src="assets/img/petalix3rounded.png" alt="PetalixTechnologies" class="img-fluid"> Petalix Technologies</a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+          <img src="assets/img/petalix3dround.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
