--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="skills-content">
 
               <div class="progress">
-                <span class="skill">AI : Bot Services, Cognitive Searc, NLP, Speech etc. <i class="val">700%</i></span>
+                <span class="skill">AI : Bot Services, Cognitive Searc, NLP, Speech etc. <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -440,7 +440,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="800">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4><a href="">Maintenance and Support</a></h4>
+              <h4><a href="">Life Cycle Management</a></h4>
               <ul>
                 <li>Ongoing Support</li>
                 <li>Updates and Upgrades</li>
